# axum-zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  configuration.example.yaml  deny.toml  docker-compose.yml  fly.toml  spec.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
configuration/: base.yaml  production.yaml
migrations/: 20221010145943_make_status_not_null_in_subscriptions.sql
src/: configurations.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
