[package]
name = "axum-zero2prod"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "axum_zero2prod"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0-rc.2"
axum-macros = "0.3.0-rc.1"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13.2"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
], default-features = false }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"], default-features = false }

[dev-dependencies]
fake = { version = "2.5.0", features = ["chrono", "uuid"] }
mime = "0.3.16"
once_cell = "1.15.0"
serde_json = "1.0.85"
