[package]
name = "axum-zero2prod"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "axum_zero2prod"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0-rc.2"
axum-macros = "0.3.0-rc.1"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13.2"
hyper = { version = "0.14", features = ["full"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde-aux = "4.0.0"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "offline",
], default-features = false }
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
unicode-segmentation = "1.10.0"
uuid = { version = "1.1.2", features = ["v4"], default-features = false }
validator = "0.16.0"
serde_json = "1.0.85"
mime = "0.3.16"
rand = { version = "0.8.5", features = ["std_rng"] }

[dependencies.reqwest]
version = "0.11.2"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

[dev-dependencies]
fake = "~2.3"
linkify = "0.9.0"
once_cell = "1.15.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5.14"
